# MoveIt-Gazebo

./: From SolidWorks to custom movable robot in Gazebo with MoveIt.md  README.md  environment.sh
aid/: CMakeLists.txt  package.xml  urdf.rviz
aid/config/: aid_gazebo_control.yaml  joint_names_aid.yaml
aid/launch/: aid_simulation.launch  display.launch  gazebo.launch
aid/meshes/: L0.STL  L1.STL  L2.STL  L3.STL  L4.STL  L5.STL  L6.STL
aid/robots/: aid.urdf  aid.xacro  aidtry.urdf
aid_moveit_config/: CMakeLists.txt  package.xml
aid_moveit_config/config/: aid.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
aid_moveit_config/launch/: aid_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
aidplus/: CMakeLists.txt  package.xml
aidplus/config/: aidplus_gazebo_control.yaml  joint_names_aidplus.yaml
aidplus/launch/: aidplus_simulation.launch  display.launch  gazebo.launch
aidplus/meshes/: L0.STL  LL1.STL  LL3.STL  LL4.STL  LL5.STL  LR1.STL  LR3.STL  LR4.STL  LR5.STL  LR6.STL
aidplus/urdf/: aidplus.urdf
aidplus_moveit_config/: CMakeLists.txt  package.xml
aidplus_moveit_config/config/: aidplus.srdf  controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
aidplus_moveit_config/launch/: aidplus_moveit_controller_manager.launch.xml  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
manipulator/: CMakeLists.txt  package.xml
manipulator/include/: Manipulator.h
manipulator/src/: Manipulator.cpp  Manipulator.h  main.cpp
