<?xml version="1.0"?>
<package format="2">
  <name>moveit_manipulation</name>
  <version>0.0.0</version>
  <description>The manipulator package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="xcy@todo.todo">xcy</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

<buildtool_depend>catkin</buildtool_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>std_msgs</build_depend>
<build_export_depend>roscpp</build_export_depend>
<build_export_depend>rospy</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<exec_depend>roscpp</exec_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>std_msgs</exec_depend>
<build_depend>sensor_msgs</build_depend>
<build_depend>geometry_msgs</build_depend>
<build_export_depend>sensor_msgs</build_export_depend>
<build_export_depend>geometry_msgs</build_export_depend>
<exec_depend>sensor_msgs</exec_depend>
<exec_depend>geometry_msgs</exec_depend>
<build_depend>interactive_markers</build_depend>
<build_depend>moveit_core</build_depend>
<build_depend>moveit_visual_tools</build_depend>
<build_depend>moveit_ros_planning</build_depend>
<build_depend>moveit_ros_planning_interface</build_depend>
<build_depend>pluginlib</build_depend>
<build_depend>geometric_shapes</build_depend>
<build_depend>rosbag</build_depend>
<build_depend>tf2_ros</build_depend>
<build_depend>tf2_eigen</build_depend>
<build_depend>tf2_geometry_msgs</build_depend>
<build_export_depend>interactive_markers</build_export_depend>
<build_export_depend>moveit_core</build_export_depend>
<build_export_depend>moveit_visual_tools</build_export_depend>
<build_export_depend>moveit_ros_planning</build_export_depend>
<build_export_depend>moveit_ros_planning_interface</build_export_depend>
<build_export_depend>pluginlib</build_export_depend>
<build_export_depend>geometric_shapes</build_export_depend>
<build_export_depend>tf2_ros</build_export_depend>
<build_export_depend>tf2_eigen</build_export_depend>
<build_export_depend>tf2_geometry_msgs</build_export_depend>
<exec_depend>interactive_markers</exec_depend>
<exec_depend>moveit_core</exec_depend>
<exec_depend>moveit_visual_tools</exec_depend>
<exec_depend>moveit_ros_planning</exec_depend>
<exec_depend>moveit_ros_planning_interface</exec_depend>
<exec_depend>pluginlib</exec_depend>
<exec_depend>geometric_shapes</exec_depend>
<exec_depend>tf2_ros</exec_depend>
<exec_depend>tf2_eigen</exec_depend>
<exec_depend>tf2_geometry_msgs</exec_depend>


</package>
